doc: updated files to generated swagger ui json file
